pp2/samples/jon_ifelse.out

*** Error line 3.
  if (this) call(); if (orthis) call(); else dontcall(); else dontcall();
                                                         ^^^^
*** syntax error

