pp2/samples/jon_ifelse.decaf
void main() {
  if (this) call(); else dontcall();
  if (this) call(); if (orthis) call(); else dontcall(); else dontcall();
  if (this) call(); else if (orthis) call(); else dontcall();
}
